# tawep-rs

./: .gitignore  Cargo.toml  README.md  tawep
The-Art-of-Writing-Efficient-Programs/Chapter02/: 00_substring_sort_prep.C
The-Art-of-Writing-Efficient-Programs/Chapter03/: 01_superscalar.C  02_branch.C
benches/: main.rs
notes/: Chapter 10: Compiler Optimizations in C++.md  Chapter 11: Undefined Behavior and Performance.md  Chapter 12: Design for Performance.md  Chapter 4: Memory Architecture and Performance.md  Chapter 5: Threads, Memory, and Concurrency.md  Chapter 6: Concurrency and Performance.md  Chapter 7: Data Structures for Concurrency.md  Chapter 8: Concurrency in C++.md  Chapter 9: High-Performance C++.md
src/: ch02.rs  lib.rs
